-added scroll into view for content section when adding a post -removed scroll bar -fixed layout shifts

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,11 @@ body {
 }
 
 body {
+    position: relative;
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
     color: var(--black);
-    overflow-x: hidden;
 }
 
 form {
